# logitech-trueforce-linux-driver

./: .gitignore  CHANGELOG.md  README.md  oversteer-logitech-trueforce.patch
.copr/: Makefile
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: build.yml  logi-dd.yml  publish-release.yml
desktop/: logi-dd-gui.desktop
docs/: BUTTON_MAPPING.md  GETTING_STARTED.md  PROTOCOL_SPECIFICATION.md  RS50_PROTOCOL_SPECIFICATION.md  SYSFS_API.md  TRUEFORCE_PROTOCOL.md
mainline/: Kbuild  Makefile  dkms.conf  hid-ids.h  hid-logitech-hidpp.c  hidpp_dd_tf_init.h  rs50_tf_init.h
packaging/akmods/: logitech-trueforce-kmod.spec
packaging/copr/: README.md
packaging/debian/: build-deb.sh  changelog  control  copyright  logi-dd-gui.install  logi-dd.install  logitech-trueforce-dkms.dkms  logitech-trueforce-dkms.install  rules
sdk/: .gitignore  README.md
tools/: dkms-update.sh  install-tf-shim.sh  linux_game_capture.sh  rebind-wheel.sh  setup.sh
udev/: 70-logitech-rs50.rules  70-logitech-trueforce.rules  71-logi-ffb-uhid.rules
userspace/logi-dd/crates/logi-dd-gui/: Cargo.toml  build.rs
userspace/logi-dd/crates/logi-dd-gui/src/: bridge.rs  main.rs  testio.rs  viewmodel.rs  worker.rs
userspace/logi-dd/crates/logi-dd-gui/ui/: app.slint  components.slint  computer_profiles.slint  curve_editor.slint  info_page.slint  led_preview.slint  rgb_strip.slint  setup.slint  slot_text.slint  test_page.slint  theme.slint  widgets.slint
userspace/logi-dd/crates/logi-dd-tui/: Cargo.toml
userspace/logi-dd/crates/logi-dd-tui/src/: app.rs  color_picker.rs  curve_editor.rs  edit.rs  keymap.rs  main.rs  ui.rs  wheel_test.rs
userspace/logi-dd/crates/tf-sim/: Cargo.toml  build.rs
userspace/logi-dd/crates/tf-sim/src/: beamng.rs  capture.rs  codemasters.rs  config.rs  daemon.rs  error.rs  f1.rs  leds.rs  lib.rs  main.rs  pcars.rs  relay.rs  sweep.rs  synth.rs  telemetry.rs  tf.rs  wrc.rs
userspace/logi-dd/crates/tf-sim/tests/: frontend_compat.rs
(+74 files in other folders)
