[package]
name = "tf-sim"
description = "Simulated TrueForce daemon: synthesizes engine haptics from game UDP telemetry"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license = "GPL-2.0-only"

[[bin]]
name = "logi-tf-sim"
path = "src/main.rs"

[dependencies]
libc = "0.2"
